# aci

./: .gitignore  IMPLEMENTATION.md  LLM.md  Makefile  README.md  README.md.additional  README.md.new  install.sh  pyproject.toml  run_tests.sh  setup.py
.github/workflows/: hanzo-resolver.yml  lint.yml  pypi-release.yml
.openhands/microagents/: repo.md
dev_config/python/: .pre-commit-config.yaml
examples/: basic_usage.py  code_tool_demo.py  dev_integration.py  getting_started.py  integration_example.py  mcp_integration.py  specialized_modules_example.py
hanzo_aci/: __init__.py  cli.py  concrete.py  interface.py  version.py
hanzo_aci/integrations/: __init__.py  claude_code.py  dev.py  mcp.py
hanzo_aci/specialized/: __init__.py  symbolic_reasoning.py  vector_search.py
hanzo_aci/symbols/: __init__.py  ast_explorer.py  symbol_finder.py  symbolic_search.py  tree_sitter_manager.py
hanzo_aci/tools/: __init__.py  code_cli.py  native.py
hanzo_aci/tools/common/: context.py  permissions.py
hanzo_aci/tools/shell/: command_executor.py
tests/: test_concrete_interface.py  test_dev_interface.py  test_full_integration.py  test_native_interface.py  test_symbolic_reasoning.py  test_vector_search.py  test_vector_search_comprehensive.py
tests/integration/: test_oh_editor.py
tests/integration/editor/: test_audio_integration.py  test_basic_operations.py  test_error_handling.py  test_file_validation.py  test_memory_usage.py  test_non_utf8_operations.py  test_peak_memory.py  test_view_supported_binary_files.py
tests/integration/indexing/: test_repo_parser.py
tests/unit/: test_exceptions.py  test_file_validation.py  test_history.py  test_results_utils.py  test_shell_utils.py  test_workspace_root.py
tests/unit/editor/: test_audio_converters.py  test_encoding.py  test_file_cache.py  test_md_converter.py
tests/unit/indexing/: test_compress_transformer.py
tests/unit/linter/: test_lint_diff.py  test_python_linter.py  test_treesitter_linter.py  test_visualize.py
