[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzo-aci"
dynamic = ["version"]
description = "Abstract Computer Interface for AI assistants"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Hanzo AI", email = "dev@hanzo.ai"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "asyncio",
]

[project.optional-dependencies]
mcp = ["hanzo-mcp>=0.1.29"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.3.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.1.0",
]
all = [
    "hanzo-mcp>=0.1.29",
]

[project.scripts]
hanzo-aci = "hanzo_aci.cli:main"

[tool.setuptools.dynamic]
version = {attr = "hanzo_aci.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["hanzo_aci*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
