[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hanzo-aci"
dynamic = ["version"]
description = "Abstract Computer Interface for AI assistants"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Hanzo AI", email = "dev@hanzo.ai"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "asyncio",
    "importlib-metadata>=4.0.0",
]

[project.optional-dependencies]
mcp = ["hanzo-mcp>=0.1.29"]

# Dev tools and testing dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "black>=23.3.0",
    "ruff>=0.1.0",
    "pytest-cov>=4.1.0",
]

# Hanzo Dev integration
hanzo-dev = [
    "dev-ai>=0.1.0",  # The Hanzo Dev package
]

# Vector database integration
vectordb = [
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
]

# Symbolic code analysis
symbolic = [
    "tree-sitter>=0.20.0",
    "pygments>=2.15.0",  # For syntax highlighting
]

# Full-text search capabilities
fulltext = [
    "whoosh>=2.7.4",
    "chardet>=5.0.0",  # For character encoding detection
]

# Language specific parsers
parsers = [
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "tree-sitter-rust>=0.20.0",
]

# All dependencies
all = [
    "hanzo-mcp>=0.1.29",
    "dev-ai>=0.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "tree-sitter>=0.20.0",
    "pygments>=2.15.0",
    "whoosh>=2.7.4",
    "chardet>=5.0.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-javascript>=0.20.0",
    "tree-sitter-go>=0.20.0",
    "tree-sitter-rust>=0.20.0",
]

[project.scripts]
hanzo-aci = "hanzo_aci.cli:main"

[tool.setuptools.dynamic]
version = {attr = "hanzo_aci.version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["hanzo_aci*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
